<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:padding="10dp"
        android:background="@color/nearblack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/saldoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo"
            android:textSize="23sp"
            android:paddingStart="22dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/dinero"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dinero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"/>
        
        <TextView
            android:id="@+id/modena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro"
            android:textSize="17sp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/juegos"
        android:textSize="30sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:background="@color/nearblack"
        app:layout_constraintTop_toBottomOf="@id/cabecera"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juego1"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juego2"
            android:textSize="20sp"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

